static/style.css
#headerimg
{
    margin: 0 0 0 10%;
}
body
{
    background-color: #ffffff;
}
#the_stage
{
	border:1px solid #999;
    border-radius: 4px;
	padding: 0;
    margin: auto;
    display: block;
}
#pred_text
{
	font-weight: bold;
	font-size: 200%;
}
#rec_result
{
	margin: 0px 30px 0px 30px;
	font-size: 200%;
}

#question
{
	position: relative;
	font-size: 140%;
}

#hide_show_btn
{
	position: absolute;
	width: 210px;
	right: 0px;
	top: 0px;
}
#button
{

	padding: 0;
    margin-left: auto;
}
.butt
{
    margin: 0px 10px 0px 10px;
    width: 90px;
    font-size: 16px;
}
p
{
    font-size: 16px;
}
#my_column
{
	position:relative;
	padding: 0;
    margin: auto;
    display: block;
}

